# projecto-escolar

./: .gitignore  docker-compose.yaml
backend/: Dockerfile  db.sqlite3  pyproject.toml
backend/api/: models.py  serializers.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py
backend/backend/: settings.py  urls.py
env_dev/: pyvenv.cfg
frontend/: .env  .gitignore  Dockerfile  package-lock.json  vite.config.js
frontend/src/: App.jsx  api.js
frontend/src/components/: Form.jsx
frontend/src/pages/: Home.jsx  Login.jsx  NotFound.jsx  Register.jsx
