[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["nsampaio77 <nelsandro.sampaio@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
asgiref = "^3.8.1"
django = "^5.2.3"
django-cors-headers = "^4.7"
djangorestframework = "^3.16"
djangorestframework-simplejwt = "^5.5"
dj-database-url = "^2.2"            
psycopg-binary = "^3.2.2"
python-dotenv = "^1.1.0"
sqlparse = "^0.5.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-django = "^4.11.1"
black = "^25.1.0"
ruff = "^0.12.7"
mypy = "^1.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
